--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'SF Pro';
+    font-family: 'SF Pro', sans-serif;
     background-color: rgb(235, 235, 235);
 }
 
@@ -51,6 +51,7 @@ body {
     border: 1px solid black;
     border-radius: 5px;
     text-align: center;
+    font-family: 'SF Pro', sans-serif;
 }
 
 .number-of-squares-btn:hover, .clear-btn:hover {
